--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URL =mongodb+srv://sherine:sher@cluster0.ypsa9au.mongodb.net/task_manager?retryWrites=true&w=majority
+MONGODB_URL = your mongo db url 
